mainPage.css
* {
  margin: 0;
  padding: 0;
  font-family: "Times New Roman", Times, serif;
}

.container {
  width: 100%;
  height: 100vh;
  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
    url("tech.jpg");
  background-position: center;
  background-size: cover;
  padding-left: 8%;
  padding-right: 8%;
  box-sizing: border-box;
}

.navbar {
  height: 12%;
  display: flex;
  align-items: center;
}

.logo {
  width: 50px;
  cursor: pointer;
}
.menu-icon {
  width: 30px;
  cursor: pointer;
  margin-left: 40px;
}

nav {
  flex: 1;
  text-align: right;
}

nav ul li {
  list-style: none;
  display: inline-block;
  margin-left: 60px;
}

nav ul li a {
  text-decoration: none;
  color: #fff;
}

.row {
  display: flex;
  height: 88%;
  align-items: center;
}

h1 {
  color: #fff;
  font-size: 100px;
}

p {
  color: #fff;
  font-size: 11px;
  line-height: 15px;
}

h4 {
  color: #fff;
  font-size: 50px;
}

button {
  width: 180px;
  color: #000;
  font-size: 12px;
  padding: 12px 0;
  background: #fff;
  border: 0;
  border-radius: 20px;
  outline: none;
  margin-top: 30px;
}

.card {
  width: 200px;
  height: 230px;
  display: inline-block;
  border-radius: 10px;
  padding: 15px 25px;
  box-sizing: border-box;
  cursor: pointer;
  margin: 10px 15px;
  background-position: center;
  background-size: cover;
  transition: transform 0.5s;
}

.card1 {
  background-image: url("aiMajor.png");
  color: white;
}

.card2 {
  background-image: url("ceMajor.png");
  color: white;
}

.card3 {
  background-image: url("csMajor.png");
  color: white;
}

.card4 {
  background-image: url("ITimage2.jpg");
  color: white;
}

.card5 {
  background-image: url("cybersecurityMajor.png");
  color: white;
}

.card:hover {
  transform: translateY(-10px);
}

